# zero2prod

./: Cargo.toml  configuration.yml  sqlx.sh
.github/workflows/: main.yml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  subscriptions.rs  utils.rs
